--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
 					<div class="work-post">
 					<h2>Highlights</h2>
 					<ul>
-						<li>Connects Retailers, Distributors, and Delivery Partners: Seamless integration for streamlined operations and communication.</li>
-						<li>Real-Time Delivery Tracking: Keep customers informed with accurate updates.</li>
-						<li>Simplifies Order Management: Easily add, track, and update orders from a single dashboard.</li>
-						<li>Automated Notifications: Ensure timely alerts for customers and delivery teams.</li>
-						<li>Empowers Small Business Retailers: Enhances efficiency to stay competitive in the market.</li>
-						<li>Performance Insights: Gain valuable data on delivery metrics and operations for continuous improvement.</li>
+						<li><b>Connects Retailers, Distributors, and Delivery Partners:</b> Seamless integration for streamlined operations and communication.</li>
+						<li><b>Real-Time Delivery Tracking:</b> Keep customers informed with accurate updates.</li>
+						<li><b>Simplifies Order Management:</b> Easily add, track, and update orders from a single dashboard.</li>
+						<li><b>Automated Notifications:</b> Ensure timely alerts for customers and delivery teams.</li>
+						<li><b>Empowers Small Business Retailers:</b> Enhances efficiency to stay competitive in the market.</li>
+						<li><b>Performance Insights:</b> Gain valuable data on delivery metrics and operations for continuous improvement.</li>
 					</ul>
 				</div>
 				</div>
@@ -344,35 +344,7 @@
 	<script type="text/javascript" src="js/jquery.imagesloaded.min.js"></script>
 	<script type="text/javascript" src="js/jquery.isotope.min.js"></script>
 	<script type="text/javascript" src="js/waypoint.min.js"></script>
-
-
-	<script type="text/javascript" src="js/jquery.appear.js"></script>
-	<script type="text/javascript" src="js/jquery.countTo.js"></script>
-	<script type="text/javascript" src="js/waypoint.min.js"></script>
-	<script type="text/javascript" src="js/raphael-min.js"></script>
-	<script type="text/javascript" src="js/DevSolutionSkill.min.js"></script>
-
-	<!-- REVOLUTION JS FILES -->
-	<script type="text/javascript" src="js/jquery.themepunch.tools.min.js"></script>
-	<script type="text/javascript" src="js/jquery.themepunch.revolution.min.js"></script>
-
-	<!-- SLIDER REVOLUTION 5.0 EXTENSIONS  
-		(Load Extensions only on Local File Systems !  
-		The following part can be removed on Server for On Demand Loading) -->	
-	<script type="text/javascript" src="js/extensions/revolution.extension.actions.min.js"></script>
-	<script type="text/javascript" src="js/extensions/revolution.extension.carousel.min.js"></script>
-	<script type="text/javascript" src="js/extensions/revolution.extension.kenburn.min.js"></script>
-	<script type="text/javascript" src="js/extensions/revolution.extension.layeranimation.min.js"></script>
-	<script type="text/javascript" src="js/extensions/revolution.extension.migration.min.js"></script>
-	<script type="text/javascript" src="js/extensions/revolution.extension.navigation.min.js"></script>
-	<script type="text/javascript" src="js/extensions/revolution.extension.parallax.min.js"></script>
-	<script type="text/javascript" src="js/extensions/revolution.extension.slideanims.min.js"></script>
-	<script type="text/javascript" src="js/extensions/revolution.extension.video.min.js"></script>
-
-	
 	<script type="text/javascript" src="js/script.js"></script>
-
-	
 	<script type="text/javascript" src="js/smooth-scroll.js"></script>
 
 	
