--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 	</div>
 	<!-- End Container -->
 	
-	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery.migrate.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/jquery.imagesloaded.min.js"></script>
@@ -346,6 +346,7 @@
 	<script type="text/javascript" src="js/waypoint.min.js"></script>
 	<script type="text/javascript" src="js/smooth-scroll.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
+	
 
 	
 </body>
