Contact section update
Contact section update

--- a/index.html
+++ b/index.html
@@ -297,21 +297,14 @@
 
 			<!-- contact section -->
 			<section class="contact-section" id="contact-section">
-<div class="container" >
-				<div class="contact-form-part">
+     			<div class="container" >
 					<h1>Let's Connect</h1>
-					<p>Say Hello!</p>
-		
-					<form id="contact-form">
-						<input name="name" id="name" type="text" placeholder="Name">
-						<input name="mail" id="mail" type="text" placeholder="Email">
-						<textarea name="comment" id="comment" placeholder="Message"></textarea>
-						<input type="submit" id="submit_contact" value="Submit">
-						<div id="msg" class="message"></div>
-					</form>
+					<p>Feel free to connect with me on my social platform below to collaborate, share ideas, or discuss exciting opportunities. Let’s create something impactful together!</p>
+				   <ul>
+					<li><a href="https://www.linkedin.com/in/sarathyuv" target="_blank">LinkedIn</a></li>
+					
+				   </ul>
 				</div>
-			</div>
-
 			</section>
 			<!-- End contact section -->
 
@@ -322,14 +315,9 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-6">
-						<p>Copyright © 2024 by sarathyuv.com</p>
+						<p>Copyright © 2024 by sarathyuv's Portfolio</p>
 					</div>
-					<div class="col-md-6">
-						<ul class="social-icons">
 					
-							<li><a href="https://www.linkedin.com/in/sarathyuv" target="_blank">LinkedIn</a></li>
-						</ul>
-					</div>
 				</div>
 			</div>
 		</footer>
