--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
-	<title>Sarathyuv.com | Product Ownership | UX/UI Designer | Visual Designer | Video Creator | Photographer</title>
+	<title>Sarathyuv's Portfolio | Product Ownership | UX/UI Designer | Visual Designer | Video Creator | Photographer</title>
 
 	<meta charset="utf-8">
 
