--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 					<div class="work-post">
 					<h2>Highlights</h2>
 					<ul>
-						<li><b>Connects Retailers, Distributors, and Delivery Partners:</b> Seamless integration for streamlined operations and communication.</li>
+						
 						<li><b>Real-Time Delivery Tracking:</b> Keep customers informed with accurate updates.</li>
-						<li><b>Simplifies Order Management:</b> Easily add, track, and update orders from a single dashboard.</li>
+						<li><b>Simplifies Delivery Management:</b> Easily add, track, and update orders from a single dashboard.</li>
 						<li><b>Automated Notifications:</b> Ensure timely alerts for customers and delivery teams.</li>
 						<li><b>Empowers Small Business Retailers:</b> Enhances efficiency to stay competitive in the market.</li>
 						<li><b>Performance Insights:</b> Gain valuable data on delivery metrics and operations for continuous improvement.</li>
