--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 			</div>
 				<div class="col-md-6">
 					<div class="work-post">
-					<h2>Highlights</h2>
+					<h2>Product Vision</h2>
 					<ul>
 						
 						<li><b>Real-Time Delivery Tracking:</b> Keep customers informed with accurate updates.</li>
