Mobile Version added
Mobile prototype added

--- a/index.html
+++ b/index.html
@@ -195,7 +195,11 @@
 					<H2>Product Design: DispatchHub</H2>
 					
 					<p>DispatchHub is a user-friendly platform designed to help small business retailers streamline operations by connecting retailers, distributors, and delivery partners.<br/> <br/> simplifies order tracking, provides real-time delivery updates, and improves customer satisfaction.<br/> <br/> With features like automated notifications and performance insights, DispatchHub ensures timely and efficient deliveries, empowering small retailers to stay competitive.</p>
-				     <a target="_blank" href="https://www.figma.com/proto/rpvz8lUcEy7tGII6PAOKGX/UX%2FUI-Design?page-id=6%3A2&node-id=34-184&viewport=495%2C-72%2C0.15&t=AG2SC4HAijeo5TCS-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=42%3A226">Figma Link</a>	
+				    <ul class="work-links">
+						<li class="list"><a target="_blank" href="https://www.figma.com/proto/rpvz8lUcEy7tGII6PAOKGX/UX%2FUI-Design?page-id=6%3A2&node-id=34-184&viewport=495%2C-72%2C0.15&t=AG2SC4HAijeo5TCS-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=42%3A226">Figma Desktop</a></li>
+						<li class="list"><a target="_blank" href="https://www.figma.com/proto/rpvz8lUcEy7tGII6PAOKGX/UX%2FUI-Design?page-id=72%3A211&node-id=726-5350&viewport=2694%2C626%2C0.5&t=VzZ2dGuJOyjdKV8a-1&scaling=scale-down&content-scaling=fixed">Figma Mobile</a>	</li>
+					</ul>
+					
 				</div>
 
 			</div>
