--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
 					<h2>Product Vision</h2>
 					<ul>
 						
-						<li><b>Real-Time Delivery Tracking:</b> Keep customers informed with accurate updates.</li>
-						<li><b>Simplifies Delivery Management:</b> Easily add, track, and update orders from a single dashboard.</li>
-						<li><b>Automated Notifications:</b> Ensure timely alerts for customers and delivery teams.</li>
-						<li><b>Empowers Small Business Retailers:</b> Enhances efficiency to stay competitive in the market.</li>
-						<li><b>Performance Insights:</b> Gain valuable data on delivery metrics and operations for continuous improvement.</li>
+						<li>Real-Time Delivery Tracking: Keep customers informed with accurate updates.</li>
+						<li>Simplifies Delivery Management: Easily add, track, and update orders from a single dashboard.</li>
+						<li>Automated Notifications: Ensure timely alerts for customers and delivery teams.</li>
+						<li>Empowers Small Business Retailers: Enhances efficiency to stay competitive in the market.</li>
+						<li>Performance Insights: Gain valuable data on delivery metrics and operations for continuous improvement.</li>
 					</ul>
 				</div>
 				</div>
