--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 								<div class="services-post">
 									
 									<h2>Video Creation</h2>
-									<p>I produce engaging videos by developing compelling scripts and detailed storyboards that bring ideas to life. By combining storytelling, design, and motion graphics, I create visual content that educates, informs, and captivates audiences.</p>
+									<p>I lead the motion design team in creating captivating videos by crafting compelling scripts and detailed storyboards that bring ideas to life. By blending storytelling, design, and motion graphics, I produce visual content that educates, informs, and engages audiences effectively.</p>
 								</div>
 								
 							</div>
