Header style updated

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<div class="about-me-box">
 
 						<div class="my-identity">
-							<img src="images/photos/vijayasarathy.jpg" alt="Vijaya Sarathy">
+							<img src="images/photos/uvsarathy.jpg" alt="Vijaya Sarathy">
 							<div class="hover-about">
 								<h1>Hello</h1>
 								<h2>I'M Sarathy</h2>
