--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 						<div class="personal-info">
 							
 							<h1>Vijaya Sarathy</h1>
-							<h4>User Experience &amp; Product Designer</h4>
+							<h4>UX/UI Designer</h4>
 							<p>
-								I bring extensive experience in Product Design focused on driving digital transformation across the product lifecycle. I excel at turning complex challenges into simple, user-friendly, and scalable solutions.<br/><br/>
+								I bring extensive experience in UX/UI Product Design focused on driving digital transformation across the product lifecycle. I excel at turning complex challenges into simple, user-friendly, and scalable solutions.<br/><br/>
 
 By aligning business goals with user needs, I deliver impactful products that enhance efficiency, foster innovation, and create meaningful experiences from concept to deployment.
 								</p>
