--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
-	<title>Sarathyuv's Portfolio | User Experience Designer</title>
+	<title>Sarathyuv's Portfolio | User Experience Designer | Visual Designer | Product Designer</title>
 
 	<meta charset="utf-8">
 
