--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<div class="personal-info">
 							
 							<h1>Vijaya Sarathy</h1>
-							<h4>UX/UI Designer</h4>
+							<h4>User Experience &amp; Visual Designer</h4>
 							<p>
 								I bring extensive experience in UX/UI Product Design focused on driving digital transformation across the product lifecycle. I excel at turning complex challenges into simple, user-friendly, and scalable solutions.<br/><br/>
 
